--- a/docs/examples/guides/latest/batch-backup/wordpress.yaml
+++ b/docs/examples/guides/latest/batch-backup/wordpress.yaml
@@ -1,44 +1,40 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: wordpress
+  name: wordpress-app
   namespace: demo
   labels:
-    app: wordpress
+    app: wordpress-app
 spec:
   ports:
-    - port: 80
+  - port: 80
   selector:
-    app: wordpress
-    tier: frontend
-  type: LoadBalancer
+    app: wordpress-app
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: wordpress
+  name: wordpress-app
   namespace: demo
   labels:
-    app: wordpress
+    app: wordpress-app
 spec:
   selector:
     matchLabels:
-      app: wordpress
-      tier: frontend
+      app: wordpress-app
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        app: wordpress
-        tier: frontend
+        app: wordpress-app
     spec:
       containers:
       - image: wordpress:5.3.2-apache
         name: wordpress
         env:
         - name: WORDPRESS_DB_HOST
-          value: wordpress-mysql
+          value: wordpress-db
         - name: WORDPRESS_DB_PASSWORD
           valueFrom:
             secretKeyRef:
@@ -53,23 +49,23 @@ spec:
         - containerPort: 80
           name: wordpress
         volumeMounts:
-        - name: wordpress-persistent-storage
+        - name: storage
           mountPath: /var/www/html
       volumes:
-      - name: wordpress-persistent-storage
+      - name: storage
         persistentVolumeClaim:
-          claimName: wp-pv-claim
+          claimName: wordpress-pvc
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: wp-pv-claim
+  name: wordpress-pvc
   namespace: demo
   labels:
-    app: wordpress
+    app: wordpress-app
 spec:
   accessModes:
-    - ReadWriteOnce
+  - ReadWriteOnce
   resources:
     requests:
       storage: 1Gi
