--- a/docs/examples/guides/latest/hooks/batch-backup/wordpress-backup.yaml
+++ b/docs/examples/guides/latest/hooks/batch-backup/wordpress-backup.yaml
@@ -9,6 +9,7 @@ spec:
   schedule: "*/3 * * * *"
   members:
   - target:
+      alias: db
       ref:
         apiVersion: apps/v1
         kind: AppBinding
@@ -16,6 +17,7 @@ spec:
     task:
       name: mysql-backup-8.0.14
   - target:
+      alias: app
       ref:
         apiVersion: apps/v1
         kind: Deployment
