Update docs for RestoreBatch + Other improvements (#78)
* WIP: Update concept docs

Signed-off-by: hossainemruz <emruz@appscode.com>

* Update BackupConfiguration doc

Signed-off-by: hossainemruz <emruz@appscode.com>

* Update backupsession,function, task, snapshot docs

Signed-off-by: hossainemruz <emruz@appscode.com>

* Update RestoreSession concept doc

Signed-off-by: hossainemruz <emruz@appscode.com>

* Add RestoreBatch concept doc + fix grammatical issues

Signed-off-by: hossainemruz <emruz@appscode.com>

* Add doc for configuring network volume accessor

Signed-off-by: hossainemruz <emruz@appscode.com>

* Add batch restore overview guide

Signed-off-by: hossainemruz <emruz@appscode.com>

* Add RestoreBatch guides

Signed-off-by: Emruz Hossain <hossainemruz@gmail.com>

* Move rule section under target in RestoreSession

Signed-off-by: Emruz Hossain <hossainemruz@gmail.com>

* Add notice to the doc that requires enterprise features

Signed-off-by: Emruz Hossain <hossainemruz@gmail.com>

* Add warning message about auto-backup is enterprise feature

Signed-off-by: Emruz Hossain <emruz@appscode.com>

* Update feature lists

Signed-off-by: Emruz Hossain <emruz@appscode.com>

* under a single configuration -> together

Signed-off-by: Tamal Saha <tamal@appscode.com>

* update appbinding definition

Signed-off-by: Tamal Saha <tamal@appscode.com>

* Grammar fix

Signed-off-by: Tamal Saha <tamal@appscode.com>

Co-authored-by: Tamal Saha <tamal@appscode.com>

--- a/docs/examples/crds/backupbatch.yaml
+++ b/docs/examples/crds/backupbatch.yaml
@@ -5,26 +5,32 @@ metadata:
   namespace: demo
 spec:
   repository:
-    name: gcs-repo
+    name: minio-repo
   schedule: "*/3 * * * *"
   members:
   - target:
+      alias: db
       ref:
         apiVersion: apps/v1
         kind: AppBinding
-        name: sample-mysql
+        name: wordpress-mysql
     task:
       name: mysql-backup-8.0.14
   - target:
+      alias: app
       ref:
         apiVersion: apps/v1
         kind: Deployment
         name: wordpress
       volumeMounts:
-        - name: wordpress-persistent-storage
-          mountPath: /var/www/html
+      - name: wordpress-persistent-storage
+        mountPath: /var/www/html
       paths:
-        - /var/www/html
+      - /var/www/html
+      exclude:
+      - /var/www/html/my-file.html
+      - /var/www/html/*.json
+  executionOrder: Parallel
   hooks:
     preBackup:
       exec:
