--- a/docs/examples/crds/restoresession.yaml
+++ b/docs/examples/crds/restoresession.yaml
@@ -67,7 +67,7 @@ spec:
       - name: my-private-registry-secret
       serviceAccountName: my-backup-sa
   tempDir:
-    disableCache: false
+    disableCaching: false
     medium: Memory
     sizeLimit: 2Gi
 status:
