--- a/docs/examples/crds/backupconfiguration.yaml
+++ b/docs/examples/crds/backupconfiguration.yaml
@@ -64,7 +64,7 @@ spec:
   tempDir:
     medium: "Memory"
     sizeLimit: "2Gi"
-    disableCache: false
+    disableCaching: false
   retentionPolicy:
     name: 'keep-last-5'
     keepLast: 5
