Update built-in Prometheus monitoring guide
Signed-off-by: Emruz Hossain <emruz@appscode.com>

--- a/docs/guides/latest/monitoring/examples/prom-config.yaml
+++ b/docs/guides/latest/monitoring/examples/prom-config.yaml
@@ -21,8 +21,8 @@ data:
       kubernetes_sd_configs:
       - role: endpoints
       relabel_configs:
-      - source_labels: [__meta_kubernetes_service_label_app]
-        regex: stash # default label for stash-operator service is "app: stash". customize this field according to label of stash-operator service of your setup.
+      - source_labels: [__meta_kubernetes_service_label_app_kubernetes_io_instance]
+        regex: stash # default label for stash Service is "app.kubernetes.io/instance: stash". customize this field according to label of stash Service of your setup.
         action: keep
       - source_labels: [__meta_kubernetes_service_annotation_prometheus_io_scrape]
         regex: true
@@ -65,10 +65,10 @@ data:
       bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
       tls_config:
         ca_file: /etc/prometheus/secret/stash-apiserver-cert/tls.crt
-        server_name: stash-operator.kube-system.svc
+        server_name: stash.kube-system.svc
       relabel_configs:
-      - source_labels: [__meta_kubernetes_service_label_app]
-        regex: stash # default label for stash-operator service is "app: stash". customize this field according to label of stash-operator service of your setup.
+      - source_labels: [__meta_kubernetes_service_label_app_kubernetes_io_instance]
+        regex: stash # default label for stash Service is "app.kubernetes.io/instance: stash". customize this field according to label of stash Service of your setup.
         action: keep
       - source_labels: [__meta_kubernetes_service_annotation_prometheus_io_scrape]
         regex: true
