--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,4 +23,4 @@ jobs:
 
       - name: Check links
         run: |
-          liche -r docs -d $(pwd) -c 10 -p -h -l -x '^('"$(pwd)"'/docs/addons/.*/guides/.*|.*github.com.*|.*api.slack.com.*|.*askapache.com.*)$'
+          liche -r docs -d $(pwd) -c 10 -p -h -l -x '^('"$(pwd)"'/docs/addons/.*/guides/.*|.*github.com.*|.*api.slack.com.*|.*askapache.com.*|.*twitter.com.*)$'
