Partial fix for codespan-schema-checker errors
Signed-off-by: hossainemruz <emruz@appscode.com>

--- a/docs/examples/crds/appbinding.yaml
+++ b/docs/examples/crds/appbinding.yaml
@@ -7,10 +7,7 @@ metadata:
     app.kubernetes.io/component: database
     app.kubernetes.io/instance: quick-postgres
     app.kubernetes.io/managed-by: kubedb.com
-    app.kubernetes.io/name: postgres
-    app.kubernetes.io/version: 10.2-v2
-    kubedb.com/kind: Postgres
-    kubedb.com/name: quick-postgres
+    app.kubernetes.io/name: postgreses.kubedb.com
 spec:
   type: kubedb.com/postgres
   secret:
