--- a/docs/examples/design/backuptemplate/default_backup_databae.yaml
+++ b/docs/examples/design/backuptemplate/default_backup_databae.yaml
@@ -4,8 +4,7 @@ metadata:
   name: quick-postgres
   namespace: demo
   labels:
-    kubedb.com/kind: Postgres
-    kubedb.com/name: quick-postgres
+    app.kubernetes.io/name: postgreses.kubedb.com
     # if stash find bellow annotations, it will take backup of it.
     annotations:
       stash.appscode.com/backuptemplate: "pgdb-backup-template"
