--- a/docs/examples/guides/latest/batch-backup/appbinding.yaml
+++ b/docs/examples/guides/latest/batch-backup/appbinding.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: demo
 spec:
   type: mysql
-  version: 8.0.14
+  version: 8.0.14-v2
   clientConfig:
     service:
       name: wordpress-db
