--- a/docs/examples/guides/latest/auto-backup/database/sample-postgres-2.yaml
+++ b/docs/examples/guides/latest/auto-backup/database/sample-postgres-2.yaml
@@ -4,7 +4,7 @@ metadata:
   name: sample-postgres-2
   namespace: demo
 spec:
-  version: "10.6-v2"
+  version: "13.2"
   storageType: Durable
   storage:
     storageClassName: "standard"
