--- a/docs/examples/guides/latest/batch-backup/backupbatch.yaml
+++ b/docs/examples/guides/latest/batch-backup/backupbatch.yaml
@@ -16,7 +16,7 @@ spec:
         kind: AppBinding
         name: wordpress-db
     task:
-      name: mysql-backup-v2020.07.09-beta.0
+      name: mysql-backup-8.0.14
   - target:
       alias: app
       ref:
