--- a/docs/examples/guides/latest/batch-backup/restorebatch.yaml
+++ b/docs/examples/guides/latest/batch-backup/restorebatch.yaml
@@ -18,7 +18,7 @@ spec:
       rules:
       - snapshots: [latest]
     task:
-      name: mysql-restore-v2020.07.09-beta.0
+      name: mysql-restore-8.0.14
   - target:
       alias: app
       ref:
