--- a/docs/examples/guides/latest/batch-backup/restoresession.yaml
+++ b/docs/examples/guides/latest/batch-backup/restoresession.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: demo
 spec:
   task:
-    name: mysql-restore-v2020.07.09-beta.0
+    name: mysql-restore-8.0.14
   repository:
     name: gcs-repo
   target:
