--- a/docs/addons/elasticsearch/auto-backup/examples/es-demo-3.yaml
+++ b/docs/addons/elasticsearch/auto-backup/examples/es-demo-3.yaml
@@ -7,7 +7,7 @@ metadata:
     stash.appscode.com/backup-blueprint: elasticsearch-backup-template
     params.stash.appscode.com/args: --ignoreType=settings,template
 spec:
-  version: 7.9.1-xpack
+  version: xpack-7.9.1-v1
   replicas: 1
   storageType: Durable
   storage:
