--- a/docs/addons/elasticsearch/auto-backup/examples/es-demo.yaml
+++ b/docs/addons/elasticsearch/auto-backup/examples/es-demo.yaml
@@ -6,7 +6,7 @@ metadata:
   annotations:
     stash.appscode.com/backup-blueprint: elasticsearch-backup-template
 spec:
-  version: 7.9.1-xpack
+  version: xpack-7.9.1-v1
   replicas: 1
   storageType: Durable
   storage:
