--- a/docs/addons/elasticsearch/kubedb/examples/elasticsearch/sample_es.yaml
+++ b/docs/addons/elasticsearch/kubedb/examples/elasticsearch/sample_es.yaml
@@ -4,7 +4,7 @@ metadata:
   name: sample-es
   namespace: demo
 spec:
-  version: 7.9.1-xpack
+  version: xpack-7.9.1-v1
   storageType: Durable
   topology:
     master:
