Fix links of MongoDB addon docs
Signed-off-by: Emruz Hossain <emruz@appscode.com>

--- a/docs/addons/mongodb/replicaset/examples/restoresession-standalone.yaml
+++ b/docs/addons/mongodb/replicaset/examples/restoresession-standalone.yaml
@@ -3,11 +3,9 @@ kind: RestoreSession
 metadata:
   name: sample-mongodb-restore
   namespace: demo
-  labels:
-    app.kubernetes.io/name: mongodbs.kubedb.com
 spec:
   task:
-    name: mongodb-restore-v2021.03.08
+    name: mongodb-restore-4.2.3
   repository:
     name: gcs-repo-custom
   target:
