--- a/docs/addons/mongodb/standalone/examples/backupconfiguration.yaml
+++ b/docs/addons/mongodb/standalone/examples/backupconfiguration.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   schedule: "*/5 * * * *"
   task:
-    name: mongodb-backup-v2021.03.08
+    name: mongodb-backup-4.2.3
   repository:
     name: gcs-repo
   target:
