Fix links of Percona-XtraDB addon docs
Signed-off-by: Emruz Hossain <emruz@appscode.com>

--- a/docs/addons/percona-xtradb/standalone/examples/backupconfiguration.yaml
+++ b/docs/addons/percona-xtradb/standalone/examples/backupconfiguration.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   schedule: "*/5 * * * *"
   task:
-    name: percona-xtradb-backup-v2021.03.08
+    name: percona-xtradb-backup-5.7.0
   repository:
     name: gcs-repo-sample-xtradb
   target:
