Fix links of PostgreSQL addon docs
Signed-off-by: Emruz Hossain <emruz@appscode.com>

--- a/docs/addons/postgres/auto-backup/examples/backupblueprint.yaml
+++ b/docs/addons/postgres/auto-backup/examples/backupblueprint.yaml
@@ -11,7 +11,7 @@ spec:
     storageSecretName: gcs-secret
   # ============== Blueprint for BackupConfiguration =================
   task:
-    name: postgres-backup-11.9.0-v4
+    name: postgres-backup-11.9
   schedule: "*/5 * * * *"
   retentionPolicy:
     name: 'keep-last-5'
