--- a/docs/addons/postgres/auto-backup/examples/sample-pg-1.yaml
+++ b/docs/addons/postgres/auto-backup/examples/sample-pg-1.yaml
@@ -6,7 +6,7 @@ metadata:
   annotations:
     stash.appscode.com/backup-blueprint: postgres-backup-template
 spec:
-  version: "11.2-v1"
+  version: "11.11"
   storageType: Durable
   storage:
     storageClassName: "standard"
