--- a/docs/addons/postgres/standalone/examples/postgres.yaml
+++ b/docs/addons/postgres/standalone/examples/postgres.yaml
@@ -4,7 +4,7 @@ metadata:
   name: sample-postgres
   namespace: demo
 spec:
-  version: "11.2-v1"
+  version: "11.11"
   storageType: Durable
   storage:
     storageClassName: "standard"
