--- a/docs/addons/postgres/standalone/examples/restoresession.yaml
+++ b/docs/addons/postgres/standalone/examples/restoresession.yaml
@@ -3,11 +3,9 @@ kind: RestoreSession
 metadata:
   name: sample-postgres-restore
   namespace: demo
-  labels:
-    app.kubernetes.io/name: postgreses.kubedb.com # this label is mandatory if you are using KubeDB to deploy the database.Otherwise your database will stuck in "Provisioning" state
 spec:
   task:
-    name: postgres-restore-11.9.0-v4
+    name: postgres-restore-11.9
   repository:
     name: gcs-repo
   target:
