--- a/docs/addons/postgres/auto-backup/examples/sample-pg-2.yaml
+++ b/docs/addons/postgres/auto-backup/examples/sample-pg-2.yaml
@@ -7,7 +7,7 @@ metadata:
     stash.appscode.com/backup-blueprint: postgres-backup-template
     stash.appscode.com/schedule: "*/3 * * * *"
 spec:
-  version: "11.2-v1"
+  version: "11.11"
   storageType: Durable
   storage:
     storageClassName: "standard"
