--- a/docs/addons/postgres/auto-backup/examples/sample-pg-3.yaml
+++ b/docs/addons/postgres/auto-backup/examples/sample-pg-3.yaml
@@ -7,7 +7,7 @@ metadata:
     stash.appscode.com/backup-blueprint: postgres-backup-template
     params.stash.appscode.com/args: --no-owner --clean
 spec:
-  version: "11.2-v1"
+  version: "11.11"
   storageType: Durable
   storage:
     storageClassName: "standard"
