Fix code schemas
Signed-off-by: Emruz Hossain <emruz@appscode.com>

--- a/docs/addons/elasticsearch/auto-backup/examples/backupblueprint.yaml
+++ b/docs/addons/elasticsearch/auto-backup/examples/backupblueprint.yaml
@@ -11,7 +11,7 @@ spec:
     storageSecretName: gcs-secret
   # ============== Blueprint for BackupConfiguration =================
   task:
-    name: elasticsearch-backup-7.3.2-v6
+    name: elasticsearch-backup-7.3.2
   schedule: "*/5 * * * *"
   interimVolumeTemplate:
     metadata:
