--- a/docs/addons/elasticsearch/customization/examples/backup/ignore-sg-index.yaml
+++ b/docs/addons/elasticsearch/customization/examples/backup/ignore-sg-index.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   schedule: "*/2 * * * *"
   task:
-    name: elasticsearch-backup-7.3.2-v6
+    name: elasticsearch-backup-7.3.2
     params:
     - name: args
       value: --match=^(?!searchguard)([a-zA-Z0-9_-]+)$ --ignoreType=template
