--- a/docs/addons/elasticsearch/customization/examples/restore/passing-args.yaml
+++ b/docs/addons/elasticsearch/customization/examples/restore/passing-args.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: demo # this label is mandatory if you are using KubeDB to deploy the database. Otherwise, Elasticsearch crd will be stuck in `Provisioning` phase.
 spec:
   task:
-    name: elasticsearch-restore-7.3.2-v6
+    name: elasticsearch-restore-7.3.2
     params:
     - name: args
       value: --ignoreType=template,settings
