--- a/docs/addons/elasticsearch/kubedb/examples/backup/backupconfiguration.yaml
+++ b/docs/addons/elasticsearch/kubedb/examples/backup/backupconfiguration.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   schedule: "*/5 * * * *"
   task:
-    name: elasticsearch-backup-7.3.2-v6
+    name: elasticsearch-backup-7.3.2
   repository:
     name: gcs-repo
   target:
