--- a/docs/addons/elasticsearch/customization/examples/backup/ignore-sg-index.yaml
+++ b/docs/addons/elasticsearch/customization/examples/backup/ignore-sg-index.yaml
@@ -9,7 +9,7 @@ spec:
     name: elasticsearch-backup-7.3.2
     params:
     - name: args
-      value: --match=^(?!searchguard)([a-zA-Z0-9_-]+)$ --ignoreType=template
+      value: --match=^(?![.])(?!searchguard).+ --ignoreType=template
   repository:
     name: gcs-repo
   target:
