--- a/docs/addons/percona-xtradb/cluster/examples/backupconfiguration.yaml
+++ b/docs/addons/percona-xtradb/cluster/examples/backupconfiguration.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   schedule: "*/5 * * * *"
   task:
-    name: percona-xtradb-backup-5.7.0
+    name: perconaxtradb-backup-5.7.0
   repository:
     name: gcs-repo-xtradb-cluster
   target:
