Update customization doc
Signed-off-by: hossainemruz <emruz@appscode.com>

--- a/docs/addons/redis/customization/examples/backup/passing-args.yaml
+++ b/docs/addons/redis/customization/examples/backup/passing-args.yaml
@@ -9,7 +9,7 @@ spec:
     name: redis-backup-6.2.5
     params:
     - name: args
-      value: --databases testdb
+      value: -db 1
   repository:
     name: gcs-repo
   target:
