--- a/docs/addons/mariadb/customization/examples/backup/resource-limit.yaml
+++ b/docs/addons/mariadb/customization/examples/backup/resource-limit.yaml
@@ -1,13 +1,12 @@
 apiVersion: stash.appscode.com/v1beta1
-kind: RestoreSession
+kind: BackupConfiguration
 metadata:
-  name: sample-mariadb-restore
+  name: sample-mariadb-backup
   namespace: demo
-  labels:
-    app.kubernetes.io/name: mariadb.kubedb.com
 spec:
+  schedule: "*/2 * * * *"
   task:
-    name: mariadb-restore-10.5.8
+    name: mariadb-backup-10.5.8
   repository:
     name: gcs-repo
   target:
@@ -24,5 +23,7 @@ spec:
         limits:
           cpu: "200m"
           memory: "1Gi"
-  rules:
-  - snapshots: [latest]
+  retentionPolicy:
+    name: keep-last-5
+    keepLast: 5
+    prune: true
