--- a/docs/addons/redis/customization/examples/restore/passing-args.yaml
+++ b/docs/addons/redis/customization/examples/restore/passing-args.yaml
@@ -3,14 +3,12 @@ kind: RestoreSession
 metadata:
   name: sample-redis-restore
   namespace: demo
-  labels:
-    app.kubernetes.io/name: redis.kubedb.com
 spec:
   task:
     name: redis-restore-6.2.5
     params:
     - name: args
-      value: --one-database testdb
+      value: --pipe-timeout 300
   repository:
     name: gcs-repo
   target:
