Add Redis Addon Docs (#164)
Signed-off-by: hossainemruz <emruz@appscode.com>

**Todos:**
- [x] Overview Guide
- [x] Backup Helm Managed Redis
- [x] Auto-backup guide
- [x] Backup customization guide

--- a/docs/addons/redis/customization/examples/restore/resource-limit.yaml
+++ b/docs/addons/redis/customization/examples/restore/resource-limit.yaml
@@ -1,19 +1,18 @@
 apiVersion: stash.appscode.com/v1beta1
-kind: BackupConfiguration
+kind: RestoreSession
 metadata:
-  name: sample-mariadb-backup
+  name: sample-redis-restore
   namespace: demo
 spec:
-  schedule: "*/2 * * * *"
   task:
-    name: mariadb-backup-10.5.8
+    name: redis-restore-6.2.5
   repository:
     name: gcs-repo
   target:
     ref:
       apiVersion: appcatalog.appscode.com/v1alpha1
       kind: AppBinding
-      name: sample-mariadb
+      name: sample-redis
   runtimeSettings:
     container:
       resources:
@@ -23,7 +22,5 @@ spec:
         limits:
           cpu: "200m"
           memory: "1Gi"
-  retentionPolicy:
-    name: keep-last-5
-    keepLast: 5
-    prune: true
+  rules:
+  - snapshots: [latest]
