--- a/docs/addons/redis/customization/examples/backup/resource-limit.yaml
+++ b/docs/addons/redis/customization/examples/backup/resource-limit.yaml
@@ -1,19 +1,19 @@
 apiVersion: stash.appscode.com/v1beta1
 kind: BackupConfiguration
 metadata:
-  name: sample-mariadb-backup
+  name: sample-redis-backup
   namespace: demo
 spec:
   schedule: "*/2 * * * *"
   task:
-    name: mariadb-backup-10.5.8
+    name: redis-backup-6.2.5
   repository:
     name: gcs-repo
   target:
     ref:
       apiVersion: appcatalog.appscode.com/v1alpha1
       kind: AppBinding
-      name: sample-mariadb
+      name: sample-redis
   runtimeSettings:
     container:
       resources:
