--- a/docs/addons/redis/customization/examples/backup/specific-user.yaml
+++ b/docs/addons/redis/customization/examples/backup/specific-user.yaml
@@ -1,28 +1,24 @@
 apiVersion: stash.appscode.com/v1beta1
 kind: BackupConfiguration
 metadata:
-  name: sample-mariadb-backup
+  name: sample-redis-backup
   namespace: demo
 spec:
   schedule: "*/2 * * * *"
   task:
-    name: mariadb-backup-10.5.8
+    name: redis-backup-6.2.5
   repository:
     name: gcs-repo
   target:
     ref:
       apiVersion: appcatalog.appscode.com/v1alpha1
       kind: AppBinding
-      name: sample-mariadb
+      name: sample-redis
   runtimeSettings:
-    container:
-      resources:
-        requests:
-          cpu: "200m"
-          memory: "1Gi"
-        limits:
-          cpu: "200m"
-          memory: "1Gi"
+    pod:
+      securityContext:
+        runAsUser: 0
+        runAsGroup: 0
   retentionPolicy:
     name: keep-last-5
     keepLast: 5
