--- a/docs/addons/redis/helm/examples/backupconfiguration.yaml
+++ b/docs/addons/redis/helm/examples/backupconfiguration.yaml
@@ -1,28 +1,19 @@
 apiVersion: stash.appscode.com/v1beta1
 kind: BackupConfiguration
 metadata:
-  name: sample-mariadb-backup
+  name: sample-redis-backup
   namespace: demo
 spec:
-  schedule: "*/2 * * * *"
+  schedule: "*/5 * * * *"
   task:
-    name: mariadb-backup-10.5.8
+    name: redis-backup-6.2.5
   repository:
     name: gcs-repo
   target:
     ref:
       apiVersion: appcatalog.appscode.com/v1alpha1
       kind: AppBinding
-      name: sample-mariadb
-  runtimeSettings:
-    container:
-      resources:
-        requests:
-          cpu: "200m"
-          memory: "1Gi"
-        limits:
-          cpu: "200m"
-          memory: "1Gi"
+      name: sample-redis
   retentionPolicy:
     name: keep-last-5
     keepLast: 5
