--- a/docs/addons/nats/customization/examples/backup/multi-retention-policy.yaml
+++ b/docs/addons/nats/customization/examples/backup/multi-retention-policy.yaml
@@ -1,21 +1,21 @@
 apiVersion: stash.appscode.com/v1beta1
 kind: BackupConfiguration
 metadata:
-  name: sample-redis-backup
+  name: sample-nats-backup
   namespace: demo
 spec:
-  schedule: "*/5 * * * *"
+  schedule: "*/2 * * * *"
   task:
-    name: redis-backup-6.2.5
+    name: nats-backup-2.4.0
   repository:
     name: gcs-repo
   target:
     ref:
       apiVersion: appcatalog.appscode.com/v1alpha1
       kind: AppBinding
-      name: sample-redis
+      name: sample-nat
   retentionPolicy:
-    name: sample-redis-retention
+    name: sample-nats-retention
     keepLast: 5
     keepDaily: 10
     keepWeekly: 20
