--- a/docs/addons/nats/customization/examples/backup/passing-args.yaml
+++ b/docs/addons/nats/customization/examples/backup/passing-args.yaml
@@ -1,22 +1,22 @@
 apiVersion: stash.appscode.com/v1beta1
 kind: BackupConfiguration
 metadata:
-  name: sample-redis-backup
+  name: sample-nats-backup
   namespace: demo
 spec:
   schedule: "*/2 * * * *"
   task:
-    name: redis-backup-6.2.5
+    name: nats-backup-2.4.0
     params:
     - name: args
-      value: -db 1
+      value: --check
   repository:
     name: gcs-repo
   target:
     ref:
       apiVersion: appcatalog.appscode.com/v1alpha1
       kind: AppBinding
-      name: sample-redis
+      name: sample-nats
   retentionPolicy:
     name: keep-last-5
     keepLast: 5
