--- a/docs/addons/nats/customization/examples/restore/passing-args.yaml
+++ b/docs/addons/nats/customization/examples/restore/passing-args.yaml
@@ -1,20 +1,20 @@
 apiVersion: stash.appscode.com/v1beta1
 kind: RestoreSession
 metadata:
-  name: sample-redis-restore
+  name: sample-nats-restore
   namespace: demo
 spec:
   task:
-    name: redis-restore-6.2.5
+    name: nats-restore-2.4.0
     params:
     - name: args
-      value: --pipe-timeout 300
+      value: --progress
   repository:
     name: gcs-repo
   target:
     ref:
       apiVersion: appcatalog.appscode.com/v1alpha1
       kind: AppBinding
-      name: sample-redis
+      name: sample-nats
   rules:
   - snapshots: [latest]
