--- a/docs/addons/nats/customization/examples/restore/specific-user.yaml
+++ b/docs/addons/nats/customization/examples/restore/specific-user.yaml
@@ -1,18 +1,18 @@
 apiVersion: stash.appscode.com/v1beta1
 kind: RestoreSession
 metadata:
-  name: sample-redis-restore
+  name: sample-nats-restore
   namespace: demo
 spec:
   task:
-    name: redis-restore-6.2.5
+    name: nats-backup-2.4.0
   repository:
     name: gcs-repo
   target:
     ref:
       apiVersion: appcatalog.appscode.com/v1alpha1
       kind: AppBinding
-      name: sample-redis
+      name: sample-nats
   runtimeSettings:
     pod:
       securityContext:
