--- a/docs/addons/nats/authentications/basic/examples/secret.yaml
+++ b/docs/addons/nats/authentications/basic/examples/secret.yaml
@@ -4,6 +4,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: sample-nats
   name: sample-nats-auth
+  namespace: demo
 data:
   password: MjIy
   username: dTI=
