--- a/docs/addons/nats/authentications/token/examples/secret.yaml
+++ b/docs/addons/nats/authentications/token/examples/secret.yaml
@@ -4,5 +4,6 @@ metadata:
   labels:
     app.kubernetes.io/instance: sample-nats
   name: sample-nats-auth
+  namespace: demo
 data:
   token: c2VjcmV0
